# melicrowd

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RECON.md  RUNBOOK.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
.claude/: settings.local.json
docs/: blog_post.md  tech-lead-agent.md
frontend/: index.html  simulation.jsx  tasks.html  topology.html  ui-drawer.jsx  ui-floor.jsx  ui-header.jsx
infra/: README.md
infra/grafana/dashboards/: .gitkeep  agent_lifecycle.json  dashboards.yml  llm_performance.json  melicrowd_noc.json  melicrowd_overview.json
infra/grafana/datasources/: datasources.yml
infra/locust/: melisim_load.py
infra/logging/: uvicorn.json
infra/nginx/: live-floor.conf
infra/postgres/: init.sql
infra/postgres/migrations/: env.py  script.py.mako
infra/prometheus/: prometheus.yml
infra/redis/: redis.conf
scripts/: bench_models.py  bench_ollama_latency.py  demo.sh
src/melicrowd/: __init__.py  cli.py  config.py  db.py  logging_setup.py
src/melicrowd/agents/: __init__.py  checkpointer.py  demo.py  edges.py  graph.py  qwen_runner.py  runner.py  state.py
src/melicrowd/api/: __init__.py  deps.py  main.py  state.py
src/melicrowd/execution/: __init__.py  error_injection.py  kafka_publisher.py  markov.py  melisim_client.py  rate_limiter.py  timing.py
src/melicrowd/llm/: __init__.py  pool.py  qwen_client.py  retry.py  trace.py
src/melicrowd/observability/: __init__.py  hooks.py  live_tracker.py  metrics.py  snapshots.py
src/melicrowd/orchestrator/: __init__.py  lifecycle.py  main.py  pool.py  scheduler.py  seller_pool.py  seller_scheduler.py
src/melicrowd/personas/: __init__.py  generator.py  models.py  orm.py  repository.py  service.py  synthetic.py
src/melicrowd/sellers/: __init__.py  models.py  orm.py  repository.py  runner.py  service.py  state.py  synthetic.py
src/melicrowd/sessions/: __init__.py  orm.py  repository.py
src/melicrowd/tech_lead/: __init__.py  backlog.json  deepseek_client.py  (+7 more)
tests/: conftest.py
tests/e2e/: .gitkeep  test_50_agents.py  test_full_session.py
tests/integration/: .gitkeep  conftest.py  test_personas_repository.py  test_redis_checkpointer.py
tests/unit/: test_agent_edges.py  test_agent_state.py  test_api_health.py  test_config.py  test_error_injection.py  test_evaluate_item.py  test_live_tracker.py  test_logging_setup.py  test_markov.py  test_personas_generator.py  test_personas_models.py  test_pool.py  test_qwen_client.py  test_qwen_pool.py  test_timing.py
(+61 files in other folders)
